fix title slide

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Polacy na frontach I wojny światowej</h1>
+				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
 				<p class="fragment">Jakub Lis i Jakub Cieślak</p>
 			</section>
 		</div>
