create major slides structure

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
 				<p class="fragment">Jakub Lis i Jakub Cieślak</p>
 			</section>
+			<section>
+				<h2>Polacy w armiach państw zaborczych</h2>
+			</section>
+			<section>
+				<h2>Legiony polskie</h2>
+			</section>
+			<section>
+				<h2>Armia polska we Francji</h2>
+			</section>
+			<section>
+				<h2>Korpusy polskie w Rosji</h2>
+			</section>
 		</div>
 	</div>
 
