add slide backgrounds and final slide

--- a/index.html
+++ b/index.html
@@ -22,17 +22,26 @@
 				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
 				<p class="fragment">Jakub Lis i Jakub Cieślak</p>
 			</section>
-			<section>
-				<h2>Polacy w armiach państw zaborczych</h2>
+			<section
+				data-background-image="https://s.ciekawostkihistoryczne.pl/uploads/2018/10/Jency-niemieccy-w-rosyjskiej-niewoli-I-wojna.jpg">
+				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Polacy w armiach państw zaborczych</h2>
+			</section>
+			<section
+				data-background-image="https://s5.tvp.pl/images2/5/1/0/uid_51082d493ecb8e1dab55c40bd80f47c61478852431130_width_1280_play_0_pos_0_gs_0_height_720_my-pierwsza-brygada-strzelecka-gromada-fotwikipedianieznany.jpg">
+				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Legiony polskie</h2>
+			</section>
+			<section data-background-image="https://i.imgur.com/fDBVXDg.jpg">
+				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
+			</section>
+			<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
+				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
 			</section>
 			<section>
-				<h2>Legiony polskie</h2>
-			</section>
-			<section>
-				<h2>Armia polska we Francji</h2>
-			</section>
-			<section>
-				<h2>Korpusy polskie w Rosji</h2>
+				<h2>Dziękujemy za uwagę</h2>
+				<img class="fragment"
+					src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi1.memy.pl%2Fobrazki%2Ff95a1042980_dziekujemy_za_uwage.jpg&f=1&nofb=1&ipt=2c50d0ed0595bdf001d116f19ca84281cda3bbecdb3a030e813e769aa3821ffc&ipo=images"
+					alt="bin laden">
+				<p class="fragment">Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
 			</section>
 		</div>
 	</div>
