fix finish slide
fix finish slide

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
 			</section>
 			<section>
-				<h2>Dziękujemy za uwagę</h2>
 				<img class="fragment"
 					src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi1.memy.pl%2Fobrazki%2Ff95a1042980_dziekujemy_za_uwage.jpg&f=1&nofb=1&ipt=2c50d0ed0595bdf001d116f19ca84281cda3bbecdb3a030e813e769aa3821ffc&ipo=images"
 					alt="bin laden">
-				<p class="fragment">Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
+				<p>Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
 			</section>
 		</div>
 	</div>
