--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
 				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
 				<p class="fragment">Jakub Lis i Jakub Cieślak</p>
 			</section>
-			<section
-				data-background-image="https://s.ciekawostkihistoryczne.pl/uploads/2018/10/Jency-niemieccy-w-rosyjskiej-niewoli-I-wojna.jpg">
-				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Polacy w armiach państw zaborczych</h2>
+			<section>
+				<section
+					data-background-image="https://s.ciekawostkihistoryczne.pl/uploads/2018/10/Jency-niemieccy-w-rosyjskiej-niewoli-I-wojna.jpg">
+					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Polacy w armiach państw zaborczych</h2>
+				</section>
+				<section>
+					<h3>Główne formacje, w których walczyli polacy podczas I&nbsp;wojny&nbsp;światowej</h3>
+					<ul>
+						<li class="fragment">Legiony polskie</li>
+						<li class="fragment">Armia polska we Francji</li>
+						<li class="fragment">Korpusy polskie w Rosji</li>
+					</ul>
+				</section>
 			</section>
 			<section
 				data-background-image="https://s5.tvp.pl/images2/5/1/0/uid_51082d493ecb8e1dab55c40bd80f47c61478852431130_width_1280_play_0_pos_0_gs_0_height_720_my-pierwsza-brygada-strzelecka-gromada-fotwikipedianieznany.jpg">
