--- a/index.html
+++ b/index.html
@@ -36,9 +36,23 @@
 					</ul>
 				</section>
 			</section>
-			<section
-				data-background-image="https://s5.tvp.pl/images2/5/1/0/uid_51082d493ecb8e1dab55c40bd80f47c61478852431130_width_1280_play_0_pos_0_gs_0_height_720_my-pierwsza-brygada-strzelecka-gromada-fotwikipedianieznany.jpg">
-				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Legiony polskie</h2>
+			<section>
+				<section
+					data-background-image="https://s5.tvp.pl/images2/5/1/0/uid_51082d493ecb8e1dab55c40bd80f47c61478852431130_width_1280_play_0_pos_0_gs_0_height_720_my-pierwsza-brygada-strzelecka-gromada-fotwikipedianieznany.jpg">
+					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Legiony polskie</h2>
+				</section>
+				<section>
+					<h3>Szybkie fakty o Legionach Polskich</h3>
+					<ul>
+						<li class="fragment">data utworzenia - <strong style="text-decoration: underline">27 sierpnia 1914
+								r.</strong>
+						</li>
+						<li class="fragment">miejsce utworzenia - <strong style="text-decoration: underline">Austro-Węgry</strong>
+						</li>
+						<li class="fragment">strona w konflikcie - <strong style="text-decoration: underline">państwa
+								centralne</strong></li>
+					</ul>
+				</section>
 			</section>
 			<section data-background-image="https://i.imgur.com/fDBVXDg.jpg">
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
