--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
 								centralne</strong></li>
 					</ul>
 				</section>
+				<section>
+					<h3>Ważne bitwy Legionów Polskich</h3>
+					<ul>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/wiki/Bitwa_pod_Laskami_i_Anielinem">Bitwa pod Laskami i Anielinem</a>
+						</li>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/wiki/Bitwa_pod_Mo%C5%82otkowem">Bitwa pod Mołotkowem</a>
+						</li>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/wiki/Bitwa_pod_%C5%81owcz%C3%B3wkiem">Bitwa pod Łowczówkiem</a></li>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/wiki/Szar%C5%BCa_pod_Rokitn%C4%85">Szarża pod Rokitną</a>
+						</li>
+						<li class="fragment"><a href="https://pl.wikipedia.org/wiki/Bitwa_pod_Jastkowem">Bitwa pod Jastkowem</a>
+						</li>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/wiki/Bitwa_pod_Kostiuchn%C3%B3wk%C4%85">Bitwa pod Kostiuchnówką</a>
+						</li>
+						<li class="fragment">
+							<a href="https://pl.wikipedia.org/w/index.php?title=Bitwa_pod_Rudk%C4%85_Miry%C5%84sk%C4%85&action=edit&redlink=1">Bitwa pod Rudką Miryńską</a>
+						</li>
+					</ul>
+				</section>
 			</section>
 			<section data-background-image="https://i.imgur.com/fDBVXDg.jpg">
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
