add a few subslides

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						</li>
 						<li class="fragment">strona w konflikcie - <strong style="text-decoration: underline">państwa
 								centralne</strong></li>
+						<li class="fragment">liczebność (rok 1915) - <strong style="text-decoration: underline">16 500</strong></li>
 					</ul>
 				</section>
 				<section>
@@ -75,6 +76,52 @@
 						<li class="fragment">
 							<a href="https://pl.wikipedia.org/w/index.php?title=Bitwa_pod_Rudk%C4%85_Miry%C5%84sk%C4%85&action=edit&redlink=1">Bitwa pod Rudką Miryńską</a>
 						</li>
+					</ul>
+				</section>
+				<section>
+					<h3>struktura organizacyjna Legionów Polskich</h3>
+					<h4 class="fragment">Początkowo istniały dwa legiony:</h4>
+					<ul>
+						<li class="fragment">Legion Wschodni - dow. gen. Adam Pietraszkiewicz</li>
+						<li class="fragment">Legion Zachodni dow. – gen. Rajmund Baczyński<span class="fragment">, a po 25 września 1914 gen. Karol
+							Durski-Trzaska</span></li>
+					</ul>
+					<p class="fragment">Później przeformowano je w trzy brygady</p>
+				</section>
+				<section>
+					<h4>Następnie przeformowano je w 3 brygady:</h4>
+					<ul>
+						<li>I brygada pod dowództwem
+							<ul>
+								<li><strong>Józefa Piłsudskiego</strong> do 27 września 1916</li>
+								<li><strong>Kazimierza Sosnkowskiego</strong> do października 1916</li>
+								<li><strong>Mariana Żegota-Januszajtis</strong> do 30 lipca 1917</li>
+							</ul>
+						</li>
+						<li>II brygada pod dowództwem
+							<ul>
+								<li><strong>Ferdynanda Küttnera</strong> do 14 lipca 1916</li>
+								<li><strong>Józefa Hallera</strong> do 19 lutego 1918</li>
+							</ul>
+						</li>
+						<li>III brygada pod dowództwem
+							<ul>
+								<li><strong>Wiktora Grzesickiego</strong> do 14 lipca 1916</li>
+								<li><strong>Stanisława Szeptyckiego</strong> do 14 listopada 1916</li>
+								<li><strong>Zygmunta Zielińskiego</strong> do 25 kwietnia 1917</li>
+								<li><strong>Bolesława Roji</strong> do 30 lipca 1917</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Austriackie dowództwo Legionów Polskich</h3>
+					<ul>
+						<li class="fragment">gen. Karol Trzaska-Durski</li>
+						<li class="fragment">płk. Józef Haller</li>
+						<li class="fragment">gen. Stanisław Puchalski</li>
+						<li class="fragment">płk. Stanisław Szeptycki</li>
+						<li class="fragment">płk. Zygmunt Zieliński</li>
 					</ul>
 				</section>
 			</section>
