--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</ul>
 				</section>
 			</section>
-			<section data-background-image="https://i.imgur.com/fDBVXDg.jpg">
+			<section data-background-image="https://static.prsa.pl/images/36c6e200-6a12-4585-af08-12040344726d.jpg">
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
 			</section>
 			<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
