idk smth changed ig

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="slides">
 			<section>
 				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
-				<p class="fragment">Jakub Lis i Jakub Cieślak</p>
+				<p>Jakub Lis i Jakub Cieślak</p>
 			</section>
 			<section>
 				<section
@@ -83,8 +83,8 @@
 					<h4 class="fragment">Początkowo istniały dwa legiony:</h4>
 					<ul>
 						<li class="fragment">Legion Wschodni - dow. gen. Adam Pietraszkiewicz</li>
-						<li class="fragment">Legion Zachodni dow. – gen. Rajmund Baczyński<span class="fragment">, a po 25 września 1914 gen. Karol
-							Durski-Trzaska</span></li>
+						<li class="fragment">Legion Zachodni dow. – gen. Rajmund Baczyński, a po 25 września 1914 gen. Karol
+							Durski-Trzaska</li>
 					</ul>
 					<p class="fragment">Później przeformowano je w trzy brygady</p>
 				</section>
@@ -124,8 +124,20 @@
 					</ul>
 				</section>
 			</section>
-			<section data-background-image="https://static.prsa.pl/images/36c6e200-6a12-4585-af08-12040344726d.jpg">
-				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
+			<section>
+				<section data-background-image="https://static.prsa.pl/images/36c6e200-6a12-4585-af08-12040344726d.jpg">
+					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
+				</section>
+				<section>
+					<h3>Szybkie Fakty</h3>
+					<ul>
+						<li class="fragment">Została powołana dekretem prezydenta Francji Raymonda Poincarégo 4 czerwca 1917 z
+							inicjatywy Romana
+							Dmowskiego</li>
+						<li class="fragment">Składała się z 3 korpusów, po 2 dywizje każdy</li>
+						<li class="fragment">Oprócz korpusów w jej skład wchodziły 3 oddziały samodzielne</li>
+					</ul>
+				</section>
 			</section>
 			<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
