add new section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
 			</section>
 			<section>
+				<section>
+					<h1>Najważniejsi polscy dowódcy I Wojny Światowej</h1>
+				</section>
+				<section>
+					<img src="./images/Jozef_Pilsudski1.jpg" alt="Józef Stalin">
+					<h3>Józef Piłsudski</h3>
+				</section>
+			</section>
+			<section>
 				<img class="fragment" src="./images/binladen.png" alt="bin laden">
 				<p>Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
 			</section>
