added 3 sections to Polacy w Żabolandii

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
 						<li class="fragment">Oprócz korpusów w jej skład wchodziły 3 oddziały samodzielne</li>
 					</ul>
 				</section>
+				<section>
+					<h3>Najważniejsze Bitwy</h3>
+				</section>
+				<section>
+					<h3>Struktura Organizacyjna</h3>
+				</section>
+				<section>
+					<h3>Dowództwo</h3>
+				</section>
 			</section>
 			<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
 				<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
