--- a/index.html
+++ b/index.html
@@ -147,8 +147,12 @@
 					<h1>Najważniejsi polscy dowódcy I Wojny Światowej</h1>
 				</section>
 				<section>
-					<img src="./images/Jozef_Pilsudski1.jpg" alt="Józef Stalin">
-					<h3>Józef Piłsudski</h3>
+					<img src="./images/Jozef_Pilsudski1.jpg" alt="Józef Stalin" height="500px">
+					<h3>Marszałek Józef Piłsudski</h3>
+				</section>
+				<section>
+					<img src="./images/Generał_Józef_Haller.jpg" alt="Józef Haller" height="500px">
+					<h3>Gen. Józef Haller</h3>
 				</section>
 			</section>
 			<section>
