--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					</ul>
 				</section>
 				<section>
-					<h3>Austriackie dowództwo Legionów Polskich</h3>
+					<h3>dowództwo Legionów Polskich</h3>
 					<ul>
 						<li class="fragment">gen. Karol Trzaska-Durski</li>
 						<li class="fragment">płk. Józef Haller</li>
