Added louis fr fr

--- a/index.html
+++ b/index.html
@@ -140,12 +140,30 @@
 				</section>
 				<section>
 					<h3>Najważniejsze Bitwy</h3>
+					<ul>
+						<li class="fragment">Bitwa nad Marną</li>
+						<li class="fragment">Bitwa pod Verdun</li>
+						<li class="fragment">Bitwa nad Sommą</li>
+					</ul>
 				</section>
 				<section>
-					<h3>Struktura Organizacyjna</h3>
+					<h3>Struktura organizacyjna armii Polskiej we Francji</h3>
+					<ul>
+						<li class="fragment">3 Korpusy po 2 brygady strzelców każdy</li>
+						<li class="fragment">3 Samodzielne oddziały</li>
+						<ul>
+							<li class="fragment">w tym 1 Pułk Człgów</li>
+						</ul>
+					</ul>
 				</section>
 				<section>
-					<h3>Dowództwo</h3>
+					<section>
+						<h3>Dowództwo armii Polskiej we Francji</h3>
+					</section>
+					<section>
+						<img src="./images/Louis_Archinard.jpg" alt="Louis Archinard">
+						<h3 class="fragment">Louis Archinard</h3>
+					</section>
 				</section>
 			</section>
 			<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
