--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<h3>Dowództwo armii Polskiej we Francji</h3>
 					</section>
 					<section>
-						<img src="./images/Louis_Archinard.jpg" alt="Louis Archinard">
+						<img src="./images/Louis_Archinard.jpg" alt="Louis Archinard" height="500px">
 						<h3 class="fragment">Louis Archinard</h3>
 					</section>
 				</section>
