--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					</section>
 					<section>
 						<img src="./images/Louis_Archinard.jpg" alt="Louis Archinard" height="500px">
-						<h3 class="fragment">Louis Archinard</h3>
+						<h3>Louis Archinard</h3>
 					</section>
 				</section>
 			</section>
