--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<li class="fragment">3 Korpusy po 2 brygady strzelców każdy</li>
 						<li class="fragment">3 Samodzielne oddziały</li>
 						<ul>
-							<li class="fragment">w tym 1 Pułk Człgów</li>
+							<li class="fragment">w tym 1 Pułk Czołgów</li>
 						</ul>
 					</ul>
 				</section>
