fix this bullshit (shit I had to see it again)

--- a/index.html
+++ b/index.html
@@ -184,12 +184,7 @@
 				</section>
 				<section>
 					<h3>Struktura organizacyjna armii Polskiej w Rosji</h3>
-					<ul>
-						<li class="fragment">3 Korpusy</li>
-						<ul>
-							<li class="fragment">służyło w nich około 700 tysięcy polaków</li>
-						</ul>
-					</ul>
+					<p>3 korpusy, służyło w nich około 700 tysięcy Polaków</p>
 				</section>
 			</section>
 			<section>
