--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</section>
 			<section>
 				<section data-background-image="https://static.prsa.pl/images/36c6e200-6a12-4585-af08-12040344726d.jpg">
-					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji</h2>
+					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji - Błękitna Armia</h2>
 				</section>
 			</section>
 			<section>
