first section + some of second

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Polacy na frontach I&nbsp;wojny światowej</h1>
+				<h1>Polacy na frontach I&nbsp;wojny&nbsp;światowej</h1>
 				<p>Jakub Lis i Jakub Cieślak</p>
 			</section>
 			<section>
@@ -27,11 +27,56 @@
 					data-background-image="https://s.ciekawostkihistoryczne.pl/uploads/2018/10/Jency-niemieccy-w-rosyjskiej-niewoli-I-wojna.jpg">
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Polacy w armiach państw zaborczych</h2>
 				</section>
+				<section>
+					<h3>Polaków w armiach państw zaborczych było w sumie około 3,4 miliona</h3>
+					<ul>
+						<li>1,4 tys armii austriackiej</li>
+						<li>1,2 mln w armii rosyjskiej</li>
+						<li>800 tys w armii niemieckiej</li>
+					</ul>
+					<p>Około <u>530 tys</u> zaginęło lub zmarło</p>
+				</section>
+				<section
+					data-background-image="https://e0.pxfuel.com/wallpapers/387/141/desktop-wallpaper-world-war-one-awesome-war-ww1.jpg">
+					<h3 style="padding: 20px; background-color: rgb(2,43,54);">Sytuacja Polaków w armiach państw zaborczych
+					</h3>
+					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">W
+						armiach
+						zborców
+						często dochodziło do
+						dyskryminacji Polaków. Mieli oni
+						co
+						prawda <u>wolność wyznania</u> i
+						mogli rozmawiać po polsku, ale często byli <u>wyszydzani i szykanowani</u>.</p>
+					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">Polacy
+						służyli w
+						armiach
+						zaborczych głównie na <u>niższych
+							stanowiskach</u>.
+					</p>
+					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">Często
+						dochodziło do
+						<u>walk bratobójczych</u> ze względu na to, że
+						Polacy walczyli po różnych stronach konfliktu.
+					</p>
+				</section>
 			</section>
 			<section>
 				<section
 					data-background-image="https://s5.tvp.pl/images2/5/1/0/uid_51082d493ecb8e1dab55c40bd80f47c61478852431130_width_1280_play_0_pos_0_gs_0_height_720_my-pierwsza-brygada-strzelecka-gromada-fotwikipedianieznany.jpg">
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Legiony polskie</h2>
+				</section>
+				<section>
+					<h3>Początkowe założenia</h3>
+					<p style="text-align: left;">Austriacy pozwolili na tworzenie polskich oddziałów na swoim terenie, ze
+						względu na nienawiść Polaków
+						do Rosjan. Za ich powstawanie odpoweidzialny był <u>Józef Piłsudski</u>. Oddziały miały być w pełni
+						<u>niezależne i polskie</u>. Przed wojną liczyły <u>3 tysiące żołnierzy</u>.</p>
+					<div style="display: flex; justify-content: center; align-items: center;"><img
+							src=" ./images/Jozef_Pilsudski1.jpg" alt="Józef Piłsudski" height="300px">
+						<p style="margin-left: 70px;">Józef Piłsudski</p>
+					</div>
+
 				</section>
 			</section>
 			<section>
