added goofy ah ul

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 				<section data-background-image="https://static.prsa.pl/images/36c6e200-6a12-4585-af08-12040344726d.jpg">
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji - Błękitna Armia</h2>
 				</section>
+				<section>
+					<h2>Powołanie Armii Polskiej we Francji</h2>
+					<ul>
+						<li class="fragment">Brak zgody Rosjan na utworzenie Błękitnej Armii</li>
+						<li class="fragment">Wcielenie Polaków do Legii Cudzoziemskiej</li>
+						<li class="fragment">Blokowanie powstawania polskich oddziałów przez Rosjan</li>
+						<li class="fragment">Akt Dwóch Cesarzy - próba przeciągnięcia polskich oddziałów na swoją stronę</li>
+						<li class="fragment"><u>4 czerwca 1917r.</u> Rosja po upadku caratu pozwoliła na powstanie Błękitnej Armii</li>
+					</ul>
+				</section>
 			</section>
 			<section>
 				<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
@@ -46,7 +56,7 @@
 			</section>
 			<section>
 				<img class="fragment" src="./images/binladen.png" alt="bin laden">
-				<p>Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
+				<p>Prezentację przygotowali <strong>Jakub Lis &copy</strong> i <strong>Jakub Cieślak &copy</strong></p>
 			</section>
 		</div>
 	</div>
