--- a/index.html
+++ b/index.html
@@ -29,32 +29,37 @@
 				</section>
 				<section>
 					<h3>Polaków w armiach państw zaborczych było w sumie około 3,4 miliona</h3>
-					<ul>
+					<ul class="fragment">
 						<li>1,4 tys armii austriackiej</li>
 						<li>1,2 mln w armii rosyjskiej</li>
 						<li>800 tys w armii niemieckiej</li>
 					</ul>
-					<p>Około <u>530 tys</u> zaginęło lub zmarło</p>
+					<p class="fragment">Około <u>530 tys</u> zaginęło lub zmarło</p>
 				</section>
 				<section
-					data-background-image="https://e0.pxfuel.com/wallpapers/387/141/desktop-wallpaper-world-war-one-awesome-war-ww1.jpg">
+					data-background-image="https://media.cnn.com/api/v1/images/stellar/prod/181031155642-ww1-horses.jpg?q=w_4300,h_2424,x_0,y_0,c_fill">
 					<h3 style="padding: 20px; background-color: rgb(2,43,54);">Sytuacja Polaków w armiach państw zaborczych
 					</h3>
-					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">W
+					<p class="fragment"
+						style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">W
 						armiach
-						zborców
+						zaborców
 						często dochodziło do
 						dyskryminacji Polaków. Mieli oni
 						co
 						prawda <u>wolność wyznania</u> i
 						mogli rozmawiać po polsku, ale często byli <u>wyszydzani i szykanowani</u>.</p>
-					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">Polacy
+					<p class="fragment"
+						style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">
+						Polacy
 						służyli w
 						armiach
 						zaborczych głównie na <u>niższych
 							stanowiskach</u>.
 					</p>
-					<p style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">Często
+					<p class="fragment"
+						style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">
+						Często
 						dochodziło do
 						<u>walk bratobójczych</u> ze względu na to, że
 						Polacy walczyli po różnych stronach konfliktu.
@@ -76,7 +81,81 @@
 							src=" ./images/Jozef_Pilsudski1.jpg" alt="Józef Piłsudski" height="300px">
 						<p style="margin-left: 70px;">Józef Piłsudski</p>
 					</div>
+				</section>
+				<section>
+					<h3>Powstanie Legionów</h3>
+					<p class="fragment" style="text-align: left; line-height: 110%; margin: 5px 0; font-size: 30px;">Po zebraniu
+						idpowiedniej
+						ilości ludzi
+						Piłsudski postanowił
+						odbić Warszawę,
+						słusznie spodziewając się, że Rosjanie nie będą bronić terenów na zachód od Wisły.</p>
+					<p class="fragment" style="text-align: left; line-height: 110%; margin: 5px 0; font-size: 30px;">Gdy Austriacy
+						dowiedzieli się
+						o tym
+						planie,
+						rozkazali
+						wcielenie
+						oddziałów do
+						armii austro-węgierskiej.</p>
+					<div class="fragment">
+						<p style="text-align: left; line-height: 110%; margin: 5px 0; font-size: 30px;">Dzięki
+							<u>Juliuszowi Leo</u> -
+							szefowi
+							Koła
+							Polskiego w
+							wiedeńskim
+							parlamencie
+							udało się utrzymać ich częściową niezależność. <u>27 sierpnia 1914</u> roku utworzono Legiony Polskie pod
+							zwierzchnictwem Austriaków.</p>
+						<div style="display: flex; justify-content: center; align-items: center;"><img src="./images/JuliuszLeo.jpg"
+								alt="Juliusz Leo" height="300px">
+							<p style="margin-left: 70px;">Juliusz Leo</p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<h3>Struktura Legionów</h3>
+					<p class="fragment" style="text-align: left; line-height: 110%; margin: 10px 0;">Po brawurowym
+						odwrocie do
+						Krakowa, mimo braku zgody władz Austriackich, Piłsudski został mianowany
+						<u>brygadzistą</u> i dowowdził Pierwszą Brygadą - tą z piosenki.</p>
+					<div class="fragment">
+						<p style="text-align: left; line-height: 110%; margin: 10px 0;">Oprócz Pierwszej Brygady w
+							skład
+							Legionów
+							wchodziły też dwie
+							inne,
+							drugą dowodził <u>Józef
+								Haller</u></p>
+						<div style="display: flex; justify-content: center; align-items: center;"><img
+								src="./images/Generał_Józef_Haller.jpg" alt="Józef Haller" height="300px">
+							<p style="margin-left: 70px;">gen. Józef Haller</p>
+						</div>
+					</div>
+				</section>
+				<section data-background-image="https://ipn.gov.pl/dokumenty/zalaczniki/1/1-70014.jpg">
+					<h3 class="fragment" style="padding: 20px; background-color: rgb(2,43,54);">Akt Dwóch Cesarzy</h3>
+					<p class="fragment"
+						style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">Józef Piłsudski,
+						wiedząć o złym stanie wojsk austriackich, postanowił zaszantażować przełożonych swoją rezygnacją.</p>
+					<p class="fragment"
+						style="text-align: left; padding: 20px; background-color: rgb(2,43,54); line-height: 110%;">
+						W rezultacie 5 listopada 1916 roku został podpisany <u>Akt Dwóch Cesarzy</u> - Austro-Węgier i Niemiec,
+						zakładający powstanie
+						<u>Królestwa Polskiego</u> (małym drukiem było napisane, że ma być zależne od Austro-Węgier i Niemiec)</p>
+				</section>
+				<section>
+					<h3>Rozwiązanie Legionów</h3>
+					<p class="fragment" style="text-align: left;">Po upadku Caratu w Rosji, władze Austro-Węgierskie chciały
+						zmusić Legionistów do złożenia
+						przysięgi i przejścia na front zachodni - nie byli już potrzebni do walki z Rosją</p>
 
+					<p class="fragment" style="text-align: left;">Piłsudski namawiał żołnierzy do odmowy składania przysięgi, za
+						co został internowany, a Legiony rozwiązane.</p>
+					<p class="fragment" style="text-align: left;">Żołnierze Legionów zostali podzieleni między armię niemiecką i
+						austriacką. Wielu legionistów przydzielonych do Austrii zdezerterowało i dołączyło do formujących się w
+						Rosji Polskich Korpusów.</p>
 				</section>
 			</section>
 			<section>
