Piekielna abominacja ul

--- a/index.html
+++ b/index.html
@@ -39,13 +39,37 @@
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Armia polska we Francji - Błękitna Armia</h2>
 				</section>
 				<section>
-					<h2>Powołanie Armii Polskiej we Francji</h2>
+					<h2>Powołanie Błękitnej Armii</h2>
 					<ul>
 						<li class="fragment">Brak zgody Rosjan na utworzenie Błękitnej Armii</li>
 						<li class="fragment">Wcielenie Polaków do Legii Cudzoziemskiej</li>
 						<li class="fragment">Blokowanie powstawania polskich oddziałów przez Rosjan</li>
 						<li class="fragment">Akt Dwóch Cesarzy - próba przeciągnięcia polskich oddziałów na swoją stronę</li>
-						<li class="fragment"><u>4 czerwca 1917r.</u> Rosja po upadku caratu pozwoliła na powstanie Błękitnej Armii</li>
+						<li class="fragment"><u>4 czerwca 1917r.</u> Rosja pozwala na powstanie Błękitnej Armii</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Geneza Nazwy</h2>
+					<ul>
+						<li class="fragment">Błękitna Armia</li>
+						<ul>
+							<li>Nazwa ta wzięła się od koloru mundurów, które Polacy dostali od Francuzów</li>
+							<ul class="fragment">
+								<li>Dodatkowo na naramiennikach i czapce znajdowały się symbole białego orła na amarantowym tle</li>
+							</ul>
+						</ul>
+						<li class="fragment">Armia Hallera</li>
+						<ul>
+							<li>Nazwa ta wzięła się od dowódcy armii, Józefa Hallera</li>
+							<ul class="fragment">
+								<li>Haller był jednym z pionierów nowego podejścia do żołnierza</li>
+								<ul class="fragment">
+									<li>Stawiał na edukację żołnierzy</li>
+									<li>Był wrażliwy na krzywdę cywili</li>
+								</ul>
+								<li class="fragment">Oprócz tego był wielkim patriotą</li>
+							</ul>
+						</ul>
 					</ul>
 				</section>
 			</section>
