completed Błękitna Armia

--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
 						</ul>
 					</ul>
 				</section>
+				<section>
+					<h2>Powrót do Polski po wojnie</h2>
+					<ul>
+						<li>Aby dostać się z Francji do Polski, polacy musieli przejechać przez Niemcy</li>
+						<li>Niemcy nie chcieli przepuścić polaków przez swój teren</li>
+						<ul class="fragment">
+							<li>Po namyśle puścili ich pociągiem pod warunkiem, że broń pojedzie w innym wagonie niż żołnierze</li>
+						</ul>
+						<li class="fragment">Po powrocie do Polski, armia Hallera skutecznie odstraszyła rosyjskich komunistów, oraz wzięła udział w wojnie Polsko-Bolszewickiej</li>
+						<li class="fragment">Józef Haller wziął udział w pokojowym odbiciu morza i dokonał zaślubin Polski z morzem</li>
+					</ul>
+				</section>
 			</section>
 			<section>
 				<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
