--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 				<img class="fragment" src="./images/binladen.png" alt="bin laden">
 				<p>Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
 			</section>
+			<section>
+				<h3>Źródła</h3>
+				<ul>
+					<li>Historia bez cenzury</li>
+					<li>Wikipedia</li>
+					<li>prof. dr hab. Przemysław Waingertner</li>
+				</ul>
+			</section>
 		</div>
 	</div>
 
