--- a/index.html
+++ b/index.html
@@ -89,6 +89,41 @@
 				<section data-background-image="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/166-113403_g.jpg">
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
 				</section>
+				<section>
+					<h2>Szybkie Fakty</h2>
+					<ul>
+						<li class="fragment">Korpusy Polskie w Rosji liczyły w sumie kilkadziesiąt tysięcy żołnierzy</li>
+						<li class="fragment">W ich skład wchodziły 3 korpusy z własną kadrą oficerską</li>
+						<ul>
+							<li>I Korpus - Białoruś</li>
+							<li>II Korpus - Rumunia</li>
+							<li>III Korpus - Ukraina</li>
+						</ul>
+						<li class="fragment">Powstawały w tym samym czasie co oddziały niepodległościowe innych państw&nbsp-&nbspnp.&nbspUkrainy</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Powołanie polskich korpusów w Rosji</h2>
+					<ul>
+						<li class="fragment">Powstały z inicjatywy Naczpolu (Naczelnego Polskiego Komitetu Narodowego)</li>
+						<li class="fragment">Składały się głównie z Polaków służących wcześniej w Armii Carskiej i zamieszkujących na terenach Rosji</li>
+					</ul>
+				</section>
+				<section>
+					<ul>
+						<li>Pozostałości Armii Carskiej i Czerwona Gwardia uznały Polaków za wrogów</li>
+						<li class="fragment">Korpusy Polskie walczyły w obronie Polaków i polskiej własności</li>
+						<li class="fragment">Dowódcą korpusów został gen. Józef Dowbor-Muśnicki</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Zasługi</h2>
+					<ul>
+						<li class="fragment">I Korpus odbił Mińsk z rąk Czerwonej Gwardii</li>
+						<li>Żołnierze II brygady Legionów i II korpusu wspólnie toczyli walkę z Niemcami</li>
+						<li>Po wojnie korpusy zasiliły Wojsko Polskie</li>
+					</ul>
+				</section>
 			</section>
 			<section>
 				<img class="fragment" src="./images/binladen.png" alt="bin laden">
