--- a/index.html
+++ b/index.html
@@ -177,14 +177,19 @@
 					<ul>
 						<li class="fragment">Błękitna Armia</li>
 						<ul>
-							<li>Nazwa ta wzięła się od koloru mundurów, które Polacy dostali od Francuzów</li>
+							<li class="fragment">Nazwa ta wzięła się od koloru mundurów, które Polacy dostali od Francuzów</li>
 							<ul class="fragment">
 								<li>Dodatkowo na naramiennikach i czapce znajdowały się symbole białego orła na amarantowym tle</li>
 							</ul>
 						</ul>
+					</ul>
+				</section>
+				<section>
+					<h2>Geneza Nazwy</h2>
+					<ul>
 						<li class="fragment">Armia Hallera</li>
 						<ul>
-							<li>Nazwa ta wzięła się od dowódcy armii, Józefa Hallera</li>
+							<li class="fragment">Nazwa ta wzięła się od dowódcy armii, Józefa Hallera</li>
 							<ul class="fragment">
 								<li>Haller był jednym z pionierów nowego podejścia do żołnierza</li>
 								<ul class="fragment">
@@ -218,7 +223,7 @@
 					<ul>
 						<li class="fragment">Korpusy Polskie w Rosji liczyły w sumie kilkadziesiąt tysięcy żołnierzy</li>
 						<li class="fragment">W ich skład wchodziły 3 korpusy z własną kadrą oficerską</li>
-						<ul>
+						<ul class="fragment">
 							<li>I Korpus - Białoruś</li>
 							<li>II Korpus - Rumunia</li>
 							<li>III Korpus - Ukraina</li>
@@ -244,8 +249,8 @@
 					<h2>Zasługi</h2>
 					<ul>
 						<li class="fragment">I Korpus odbił Mińsk z rąk Czerwonej Gwardii</li>
-						<li>Żołnierze II brygady Legionów i II korpusu wspólnie toczyli walkę z Niemcami</li>
-						<li>Po wojnie korpusy zasiliły Wojsko Polskie</li>
+						<li class="fragment">Żołnierze II brygady Legionów i II korpusu wspólnie toczyli walkę z Niemcami</li>
+						<li class="fragment">Po wojnie korpusy zasiliły Wojsko Polskie</li>
 					</ul>
 				</section>
 			</section>
