--- a/index.html
+++ b/index.html
@@ -209,8 +209,10 @@
 						<ul class="fragment">
 							<li>Po namyśle puścili ich pociągiem pod warunkiem, że broń pojedzie w innym wagonie niż żołnierze</li>
 						</ul>
-						<li class="fragment">Po powrocie do Polski, armia Hallera skutecznie odstraszyła rosyjskich komunistów, oraz wzięła udział w wojnie Polsko-Bolszewickiej</li>
-						<li class="fragment">Józef Haller wziął udział w pokojowym odbiciu morza i dokonał zaślubin Polski z morzem</li>
+						<li class="fragment">Po powrocie do Polski, armia Hallera skutecznie odstraszyła rosyjskich komunistów, oraz
+							wzięła udział w wojnie Polsko-Bolszewickiej</li>
+						<li class="fragment">Józef Haller wziął udział w pokojowym odbiciu morza i dokonał zaślubin Polski z morzem
+						</li>
 					</ul>
 				</section>
 			</section>
@@ -228,14 +230,16 @@
 							<li>II Korpus - Rumunia</li>
 							<li>III Korpus - Ukraina</li>
 						</ul>
-						<li class="fragment">Powstawały w tym samym czasie co oddziały niepodległościowe innych państw&nbsp-&nbspnp.&nbspUkrainy</li>
+						<li class="fragment">Powstawały w tym samym czasie co oddziały niepodległościowe innych
+							państw&nbsp-&nbspnp.&nbspUkrainy</li>
 					</ul>
 				</section>
 				<section>
 					<h2>Powołanie polskich korpusów w Rosji</h2>
 					<ul>
 						<li class="fragment">Powstały z inicjatywy Naczpolu (Naczelnego Polskiego Komitetu Narodowego)</li>
-						<li class="fragment">Składały się głównie z Polaków służących wcześniej w Armii Carskiej i zamieszkujących na terenach Rosji</li>
+						<li class="fragment">Składały się głównie z Polaków służących wcześniej w Armii Carskiej i zamieszkujących
+							na terenach Rosji</li>
 					</ul>
 				</section>
 				<section>
@@ -256,7 +260,7 @@
 			</section>
 			<section>
 				<img class="fragment" src="./images/binladen.png" alt="bin laden">
-				<p>Prezentację przygotowali <strong>Jakub Lis &copy</strong> i <strong>Jakub Cieślak &copy</strong></p>
+				<p>Prezentację przygotowali <strong>Jakub Lis</strong> i <strong>Jakub Cieślak</strong></p>
 			</section>
 			<section>
 				<h3>Źródła</h3>
