--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<section>
 					<h3>Powstanie Legionów</h3>
 					<p class="fragment" style="text-align: left; line-height: 110%; margin: 5px 0; font-size: 30px;">Po zebraniu
-						idpowiedniej
+						odpowiedniej
 						ilości ludzi
 						Piłsudski postanowił
 						odbić Warszawę,
