--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<h3>Struktura Legionów</h3>
 					<p class="fragment" style="text-align: left; line-height: 110%; margin: 10px 0;">Po brawurowym
 						odwrocie do
-						Krakowa, mimo braku zgody władz Austriackich, Piłsudski został mianowany
+						Krakowa, do którego doszło mimo braku zgody władz Austriackich, Piłsudski został mianowany
 						<u>brygadzistą</u> i dowowdził Pierwszą Brygadą - tą z piosenki.</p>
 					<div class="fragment">
 						<p style="text-align: left; line-height: 110%; margin: 10px 0;">Oprócz Pierwszej Brygady w
@@ -221,7 +221,7 @@
 					<h2 style="padding: 20px; background-color: rgba(2,43,54,.7);">Korpusy polskie w Rosji</h2>
 				</section>
 				<section>
-					<h2>Szybkie Fakty</h2>
+					<h2>Struktura i powstanie Korpusów</h2>
 					<ul>
 						<li class="fragment">Korpusy Polskie w Rosji liczyły w sumie kilkadziesiąt tysięcy żołnierzy</li>
 						<li class="fragment">W ich skład wchodziły 3 korpusy z własną kadrą oficerską</li>
